[workspace]
members = [
    "ch01-2-hello_cargo",
    "ch02-guessing_game",
    "ch03-3-functions",
    "ch03-5-branches",
    "ch03-5-loops",
    "ch04-1-ownership",
    "ch04-2-mutable_ref",
    "ch04-2-dangling_ref",
    "ch04-3-slices",
    "ch05-2-rectangles",
    "ch06-1-enum",
    "ch06-2-match",
    "ch07-1-communicator",
    "ch07-2-pub",
    "ch07-3-use",
    "ch08-1-vec",
    "ch08-2-string",
    "ch08-3-hash_maps",
    "ch08-3-exercise1",
    "ch08-3-exercise2",
]