[workspace]
members = [
    "ch01-2-hello_cargo",
    "ch02-guessing_game",
    "ch03-3-functions",
    "ch03-5-branches",
    "ch03-5-loops",
    "ch04-1-ownership",
    "ch04-2-mutable_ref",
    "ch04-2-dangling_ref",
    "ch04-3-slices",
    "ch05-2-rectangles",
    "ch06-1-enum",
    "ch06-2-match",
    "ch07-1-communicator",
    "ch07-2-pub",
    "ch07-3-use",
    "ch08-1-vec",
    "ch08-2-string",
    "ch08-3-hash_maps",
    "ch08-3-exercise1",
    "ch08-3-exercise2",
    "ch09-2-result",
    "ch09-3-guessing_game",
    "ch10-1-generics",
    "ch10-2-traits",
    "ch10-3-lifetime",
    "ch11-1-adder",
    "ch11-3-adder",
    "ch12-minigrep",
    "ch13-1-closures",
    "ch13-1-environment",
    "ch13-2-iterators",
    "ch14-2-my_crate",
    "ch14-2-art",
    "ch14-3-adder",
    "ch14-3-add-one",
    "ch14-3-add-two",
    "ch15-1-cons",
]